--- a/AUTHORS
+++ b/AUTHORS
@@ -1,2 +1,4 @@
-Miranda Evans miranda.r.evans@gmail.com
-Kevin Yook kevin.yook@holbertonschool.com
+Miranda Evans <miranda.r.evans@gmail.com>
+Kevin Yook <kevin.yook@holbertonschool.com>
+Jack Gindi <jmgindi@gmail.com>
+Bennett Dixon <bennettdixon16@gmail.com>
